<resources>
    <string name="app_name">BoedayaID</string>
    <string name="all">Semua</string>
    <string name="province">Provinsi</string>
    <string name="province_logo">Logo Provinsi</string>
    <string name="dummy_province_name">Jawa Barat</string>
    <string name="splash_image">splash image</string>
    <string name="boedaya_id">Boedaya ID</string>
    <string name="dummy_suku_name">Sunda</string>
    <string name="translate_page">Halaman Terjemahan</string>
    <string name="translate_bahasa">Translate bahasa</string>
    <string name="detail">Detail</string>
    <string name="tap_to_speach">Sentuh Untuk Berbicara</string>
    <string name="dummy_chat">Ini adalah dummy Chat</string>
    <string name="translate_ke_aksara"><u>Translate ke Aksara</u></string>
    <string name="suku_not_definded">Suku di daerah ini belum Terdaftar</string>
    <string name="translate_status">Sedang menerjemahkan</string>
    <string name="sejarah">Sejarah</string>
    <string name="dummy_sejarah">Suku Sunda adalah kelompok etnis yang berasal dari bagian barat pulau Jawa, Indonesia, dengan istilah Tatar Pasundan yang mencakup wilayah administrasi provinsi Jawa Barat, Banten, Jakarta, dan wilayah barat Jawa Tengah (Banyumasan). Orang Sunda tersebar diberbagai wilayah Indonesia, dengan provinsi Banten dan Jawa Barat sebagai wilayah utamanya.\nJati diri yang mempersatukan orang Sunda adalah bahasa dan budayanya. Orang Sunda dikenal memiliki sifat optimistis, ramah, sopan, riang dan bersahaja. Orang Portugis mencatat dalam Suma Oriental bahwa orang sunda bersifat jujur dan pemberani. Orang Sunda juga adalah suku bangsa pertama yang melakukan hubungan diplomatik secara sejajar dengan bangsa lain. Sang Hyang Surawisesa atau Raja Samian adalah raja pertama di Nusantara yang melakukan hubungan diplomatik dengan bangsa lain pada abad ke-15 dengan orang Portugis di Malaka. Hasil dari diplomasinya dituangkan dalam Prasasti Perjanjian Sunda-Portugal. Beberapa tokoh Sunda juga menjabat Menteri dan pernah menjadi Wakil Presiden pada kabinet RI.\nDi samping prestasi dalam bidang politik (khususnya pada awal masa kemerdekaan Indonesia) dan ekonomi, prestasi yang cukup membanggakan adalah pada bidang budaya yaitu banyaknya penyanyi, musisi, aktor dan aktris dari etnis Sunda yang memiliki prestasi di tingkat nasional, maupun internasional.</string>
    <string name="makanan_daerah">Makanan Daerah</string>
    <string name="rumah_adat">Rumah Adat</string>
    <string name="kesenian_daerah">Kesenian Daerah</string>
    <string name="tempat_wisata">Tempat Wisata</string>
    <string name="angklung">Angklung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recognition_status">Recognition Status</string>
    <string name="ketik_untuk_menerjemahkan">Ketik untuk menerjemahkan</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="detail_tempat_wisata">Detail Tempat Wisata</string>
    <string name="alamat">Kota Bandung</string>
    <string name="aksara_jawa">Aksara Jawa</string>
    <string name="btn_coba">Coba</string>
    <string name="belajar_aksara">Belajar Aksara</string>
</resources>