<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/tv_aksara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="7dp"
        android:text="@string/aksara_jawa"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_aksara"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tv_aksara"
        android:layout_marginHorizontal="7dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <ImageView
            android:id="@+id/img_aksara"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/province_logo" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_coba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_aksara"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="7dp"
        android:text="@string/btn_coba" />


</RelativeLayout>
