<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_wisata.DetailWisataActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_tempat_wisata"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_nama_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/dummy_suku_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_tempat"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/tv_nama_tempat"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:scaleType="center"
        android:background="@color/blue_200" />

    <TextView
        android:id="@+id/tv_alamat_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_tempat"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_desc_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_alamat_tempat"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/dummy_sejarah"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>