<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.translate.TranslateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="">

        <TextView
            android:id="@+id/tv_bahasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/translate_bahasa"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fab_speech"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_speech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue_700"
        android:contentDescription="@string/translate_page"
        android:text="@string/tap_to_speach"
        android:textColor="@color/white"
        app:icon="@drawable/ic_mic"
        app:iconTint="@color/white" />

</RelativeLayout>