<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.buy_ticket.BuyTicketActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_tempat_wisata"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_nama_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/dummy_suku_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_tempat"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/tv_nama_tempat"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:background="@color/blue_200"
        android:scaleType="center" />

    <TextView
        android:id="@+id/tv_alamat_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_tempat"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_desc_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_alamat_tempat"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/detail"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc_tempat"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="10dp"
        android:text="Rp. 25.000,00 / tiket"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_harga"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <Button
            android:id="@+id/btn_kurang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-" />

        <TextView
            android:id="@+id/tv_jumlah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tambah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_beli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln"
        android:layout_marginHorizontal="60dp"
        android:text="Beli Tiket" />

</RelativeLayout>