<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_indonesia_map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/app_title"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_peta_indonesia" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_indonesia_map"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_indo_islands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/all_islands"
                style="@style/CustomChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/app_province"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/province"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/carousel_province"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/app_province"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="60dp" />

    <ProgressBar
        android:id="@+id/loading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_province"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>